--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
     </section>
 
     <!-- Footer -->
-    <footer>
+    <!-- <footer>
         <p>GSTIN: 03ILZPS7086Q1ZK | A/c No: 50200029180692 | IFSC Code: HDFC0002223</p>
         <p>Terms & Conditions: Goods once sold will not be taken back. Interest @24% p.a. will be charged if bill is not paid within 15 days.</p>
-    </footer>
+    </footer> -->
 
     <script>
         let itemCount = 0;
